need to add more breakpoints for the video, and figure out a way to make zindex work on the iframe

--- a/styles/Videoplayer.css
+++ b/styles/Videoplayer.css
@@ -1,36 +1,28 @@
-.videoWrapper{
-    
+.youtube-container{
+    display: flex;
+    justify-content: center;
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.7);
 }
-.react-player iframe{
-    margin-top: 0;
-    margin-left:0.15rem;
-    margin-right: 0rem;
-    margin-bottom: 3rem;
-    top:15%;
-    left:7.5%;
+iframe{
+    object-fit:cover;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right:auto;
+    width: 67.5%;
+    height: 71%;
     padding:0rem;
     position: absolute;
-    object-fit: fill;
-    max-width:892px;
-    max-height:720px;
-    min-height: 700px;
-    min-width: 800px;
-    margin-bottom:0.5rem;
     overflow:hidden;
+    z-index: 1;
 }
-@media screen and (max-width:600px)
+@media screen 
+and (max-width:600px)
 {
-    .react-player iframe{
-        position: absolute !important;
-        left: -0.25% !important;
-        bottom: 50% !important;
-        min-width: 20% !important;
-        width: 99% !important;
+    iframe{
+        height: 75%;
+        width:70%;
     }
-    .videoWrapper {
-        top: -41% !important;
-    }
+
 }
 
 /*position:absolute;
