--- a/styles/Videoplayer.css
+++ b/styles/Videoplayer.css
@@ -14,9 +14,9 @@ iframe{
     width: 100%;
     height: 100%;
     padding:9.6% 17.3% 9.5%;
-    position: relative;
+    position: absolute;
     overflow:hidden;
-    z-index: 3;
+    z-index: 5;
 }
 
 
