--- a/styles/Navbar.css
+++ b/styles/Navbar.css
@@ -22,7 +22,8 @@ and (max-width:750px)
     color:white;
     text-align:center;
     margin-right:auto;
-    font-size:10vw;
+    
+    font-size:9vw;
     font-weight: bold;
     position: relative;
     max-width: 90vw;
@@ -46,13 +47,13 @@ and (max-width:750px)
     margin-left:auto;
     position:relative;
     display:flex;
-    
-    
+    height:40px;
+    padding-bottom: 10px;
     justify-content: flex-end;
     align-items: center;
     overflow:hidden;
     max-width: 100vw;
-    z-index: 10;
+    z-index: 1;
 }
 
 ul{
@@ -66,6 +67,7 @@ ul{
     align-items: center;
     gap:0.5rem;
     list-style:none;
+    
 }
 
 
