--- a/styles/Videobg.css
+++ b/styles/Videobg.css
@@ -1,35 +1,31 @@
-.background-container{
-    width: 100%;
-    height: 100%;
-    max-width: 1050px;
-    margin: 0 auto;
-}
-.background-container .wrapper-container{
-    position: relative;
-    padding-top: 20px;
-    padding-bottom: 67.5%;
-    height: 0;
-   
 
-}
+
 .wrapper-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
-    background: url('../public/assets/best1.png') center center no-repeat;
-    background-size: contain;
+    height: 950px;
+   
 }
-.overlay-container{
-    width: 200px;
-    height: 200px;
-    background-color: transparent;
-    position: absolute;
-    top: 50px;
-    left: 10px;
-    z-index: -1;
+.background-container{
+    z-index: 9;
+   width: 100%;
+   height: 100%;
+   max-width: 1050px;
+   margin-bottom: 5rem;
+   background: url('../public/assets/best1.png') center center no-repeat;
+   background-size: contain;
+   margin-left: auto;
+   margin-right: auto;
+   position: absolute;
+   
 }
+
 .wrapper-container iframe{
     box-sizing: border-box;
     
-    padding: 10.9% 17.8% 10.8%;
+    padding: 5.1% 27% 9%;
 
     top: 0;
     left: 0;
