--- a/styles/Videobg.css
+++ b/styles/Videobg.css
@@ -6,35 +6,25 @@
     align-items: center;
     position: relative;
     height: 950px;
+    overflow: hidden;
    
 }
 .background-container{
-    z-index: 9;
+   z-index: 6;
    width: 100%;
    height: 100%;
-   max-width: 1050px;
-   margin-bottom: 5rem;
+   min-height: 600px;
+   max-height: 800px;
+   max-width: 1000px;
+   margin-bottom: 4rem;
    background: url('../public/assets/best1.png') center center no-repeat;
    background-size: contain;
    margin-left: auto;
    margin-right: auto;
    position: absolute;
-   
+   padding-bottom: 67.5%;
 }
 
 .wrapper-container iframe{
     box-sizing: border-box;
-    
-    padding: 5.1% 27% 9%;
-
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    
-}
-@media screen and (max-width:600px){
-    .wrapper-container iframe{
-        padding: 11.9% 16.8% 11.8% !important;
-    }
 }
