--- a/styles/Videoplayer.css
+++ b/styles/Videoplayer.css
@@ -4,21 +4,135 @@
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.7);
 }
 iframe{
+    border: 22px solid transparent;
     box-sizing: border-box;
-    object-fit:cover;
+    object-fit:contain;
     margin-bottom: auto;
     margin-left: auto;
     margin-right:auto;
-    top:0;
-    left:0;
     width: 100%;
     height: 100%;
-    padding:9.6% 17.3% 9.5%;
+    max-width: 700px;
+    max-height: 620px;
+    min-height: 300px;
+    padding: 0% 0% 4%;
     position: absolute;
-    overflow:hidden;
+    overflow:visible;
     z-index: 5;
 }
 
+
+@media screen and
+(max-width:1560px){
+    iframe{
+        padding: 0% 0% 4% !important;
+    }
+}
+@media screen and 
+(max-width:1260px){
+    iframe{
+        padding: 0% 0% 4% !important;
+    }
+}
+
+@media screen and
+(max-width: 980px) {
+    iframe{
+        max-width: 72.5% !important;
+        padding: 0% 0.25% 7% !important;
+        max-height: 70% !important;
+    }
+}
+@media screen and
+(max-width:870px) {
+    iframe{
+        padding: 3% 0% 11% !important;
+    }
+    
+}
+@media screen and 
+(max-width:760px){
+    iframe{
+        max-height: 65% !important;
+        padding: 5% 0% 14% !important;
+    }
+    
+}
+@media screen and
+(max-width:680px){
+    iframe{
+        max-height: 500px !important;
+        width: 575px !important;
+        padding: 5% 0% 15% !important;
+    }
+    
+}
+@media screen and
+(max-width: 600px) {
+    iframe{
+        max-width: 75% !important;
+        padding: 9% 0% 18% !important;
+    }
+}
+@media screen and
+(max-width: 555px) {
+    iframe{
+        padding: 10% 0.5% 26% !important;
+    }
+}
+@media screen and
+(max-width:510px) {
+    iframe{
+        height: 440px !important;
+        width: 510px !important;
+    }
+    
+}
+@media screen and
+(max-width:455px) {
+    iframe{
+        max-width: 80% !important;
+        height: 400px !important;
+        width: 510px !important;
+        padding: 10% 0% 26% !important;
+    }
+}
+@media screen and
+(max-width:405px) {
+    iframe{
+        max-width: 100% !important;
+        height: 360px !important;
+        width: 470px !important;
+        padding: 9% 2% 26% !important;
+    }
+}
+@media screen and
+(max-width:370px) {
+    iframe{
+        padding: 13.1% 1% 32% !important;
+    }
+}
+@media screen and 
+(max-width:340px){
+    iframe{
+        padding: 15% 0% 39% !important;
+    }
+}
+@media screen and
+(max-width:310px) {
+    iframe{
+        width: 90% !important;
+        padding: 21.5% 0% 45% !important;
+    }
+}
+@media screen and
+(max-width:280px) {
+    iframe{
+        padding: 15% 0% 40% !important;
+        width: 110% !important;
+        max-height: 35vh   !important;
+    }
+}
 
 /*position:absolute;
     border-radius:0.25em;
