working on mobile optimization

--- a/styles/Videobg.css
+++ b/styles/Videobg.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 950px;
+    height: 100%;
     overflow: hidden;
    
 }
@@ -27,4 +27,11 @@
 
 .wrapper-container iframe{
     box-sizing: border-box;
+}
+
+@media screen and
+(max-width:600px) {
+    .background-container{
+        
+    }
 }
