--- a/styles/Sectiontwobar.css
+++ b/styles/Sectiontwobar.css
@@ -5,7 +5,7 @@
     border:5px  #222;
     background: rgba(0,0,0,0.1);
     border-radius: 1rem;
-    font-size: 6vw;
+    font-size: 4vw;
     height:20vh;
     width: 60vw;
     margin-left: auto ;
@@ -39,7 +39,8 @@ h2{
   animation: heart 0.6s linear infinite;
 }*/
 .heart {
-  margin-left: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
   --c: #f20044;
   width: 100px;
   aspect-ratio: 1;
