--- a/styles/ScrollButton.css
+++ b/styles/ScrollButton.css
@@ -1,7 +1,6 @@
 .top-to-btm{
     position: relative;
-    height:100px;
-    z-index: 5;
+    z-index: 20;
   }
   .icon-position{
     position: fixed;
@@ -31,6 +30,48 @@
     background: lightgray;
     color: #222;
     border: 2px solid #222;
+  }
+  @media screen and
+  (max-width:1270px) {
+    .icon-position {
+      right: 4%;
+    }
+    .icon-position-top{
+      right: 4%;
+    }
+    .icon-style{
+      height:65px;
+      width: 65px;
+    }
+  }
+  @media screen and
+  (max-width:980px) {
+    .icon-position {
+      right: 3%;
+    }
+    .icon-position-top{
+      right: 3%;
+    }
+    .icon-style{
+      height: 50px;
+      width: 50px;
+    }
+  }
+  @media screen and
+  (max-width:830px){
+    .icon-position {
+      right: 2.25%;
+    }
+    .icon-position-top{
+      right: 2.25%;
+    }
+  }
+  @media screen and 
+  (max-width: 600px){
+    .icon-style{
+      height: 40px;
+      width: 40px;
+    }
   }
   @keyframes movebtn {
     0%{
