--- a/styles/Videobg.css
+++ b/styles/Videobg.css
@@ -16,7 +16,7 @@
    min-height: 600px;
    max-height: 800px;
    max-width: 1000px;
-   margin-bottom: 4rem;
+   margin-bottom: 6%;
    background: url('../public/assets/best1.png') center center no-repeat;
    background-size: contain;
    margin-left: auto;
@@ -28,10 +28,30 @@
 .wrapper-container iframe{
     box-sizing: border-box;
 }
-
 @media screen and
-(max-width:600px) {
+(max-width:1270px)
+{
     .background-container{
-        
+        width: 100%;
+        height: 100%;
+        margin-bottom: 10%;
+    }
+}
+@media screen and 
+(max-width:980px)
+{
+    .background-container{
+
+    }
+}
+@media screen and
+(max-width:520px) 
+{
+    .background-container{
+        background-size: 110% 75%;
+        padding-bottom: 0%;
+        max-height: 550px;
+        max-width: 400px;
+        margin-bottom: 0%;
     }
 }
