--- a/styles/Videobg.css
+++ b/styles/Videobg.css
@@ -9,6 +9,14 @@
     overflow: hidden;
    
 }
+wrapper-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
 .background-container{
    z-index: 6;
    width: 100%;
