--- a/styles/Videoplayer.css
+++ b/styles/Videoplayer.css
@@ -19,18 +19,16 @@ iframe{
     padding: 3% 0% 3%;
     overflow:visible;
 }
-Modal {
-    background-color: black;
-    opacity: 1;
-  }
+
   .modal-container {
     position: absolute;
     display: flex;
     width: 350px;
     flex-direction: column;
-    top: 30%;
-    left: 42.5%;
+    top: 50%;
+    left: 50%;
     z-index: 9999;
+    transform: translate(-50%, -50%);
   }
   .clippy-container {
     background: url("/assets/clippy.gif") center center no-repeat;
