some styling to the dialogue moving onto mint window

--- a/styles/Home.css
+++ b/styles/Home.css
@@ -20,3 +20,7 @@ body{
 html{
   scroll-behavior: smooth;
 }
+@font-face {
+  font-family: 'Tahoma';
+  src: url(../public/assets/fonts/tahoma.ttf);
+}
