--- a/styles/Videoplayer.css
+++ b/styles/Videoplayer.css
@@ -25,7 +25,7 @@ iframe{
   .modal-container {
     position: absolute;
     display: flex;
-    width: 420px;
+    width: 450px;
     flex-direction: column;
     top: 50%;
     left: 50%;
@@ -36,15 +36,15 @@ iframe{
   .clippy-container {
     background: url("/assets/clippy.gif") center center no-repeat;
     background-size: contain;
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
   }
   .dialogue-box::before {
     align-self: flex-end;
     content: "";
     display: block;
     position: absolute;
-    top: 67%;
+    top: 57%;
     left: 35%;
     width: 6vmin;
     height: 6vmin;
@@ -61,8 +61,8 @@ iframe{
     align-self: flex-end;
     bottom: 35vmin;
     left: 20vmin;
-    width: 275px;
-    height:300px;
+    width: 300px;
+    height:250px;
     padding: 2vmin;
     background: #ffc;
     border-radius: 1vmin;
@@ -71,10 +71,10 @@ iframe{
     background-color: #ffc;
   }
   .dialogue-title{
-    text-align: left;
+    text-align: left
   }
   .button-container {
-    margin-top: 0.5rem;
+    margin-top: 2rem;
     gap:1rem;
     display: flex;
     width: 100%;
