--- a/styles/Videobg.css
+++ b/styles/Videobg.css
@@ -20,10 +20,10 @@ wrapper-container{
 .background-container{
    z-index: 6;
    width: 100%;
-   height: 100%;
+   height: 110%;
    min-height: 600px;
-   max-height: 800px;
-   max-width: 1000px;
+   max-height: 880px;
+   max-width: 995px;
    margin-bottom: 6%;
    background: url('../public/assets/frame.webp') center center no-repeat;
    background-size: contain;
@@ -36,22 +36,60 @@ wrapper-container{
 .wrapper-container iframe{
     box-sizing: border-box;
 }
-@media screen and
+
+
+
+/* @media screen and
+(max-width:576px) and (min-width:786px) 
+{
+    .background-container{
+        width: 1100px;
+        height: 100%;
+        margin-bottom: 7%;
+    }
+} */
+/* @media screen and
 (max-width:1270px)
 {
     .background-container{
-        width: 100%;
+        width: 1100px;
         height: 100%;
-        margin-bottom: 10%;
+        margin-bottom: 7%;
     }
-}
-@media screen and 
-(max-width:980px)
+} */
+@media screen and (min-width: 776px) and (max-width: 805)
 {
     .background-container{
-
+        width: 857px;
+        height: 100%;
+        margin-bottom: 7%;
     }
 }
+@media screen and (min-width: 806px) and (max-width: 980px)
+{
+    .background-container{
+        width: 857px;
+        height: 100%;
+        margin-bottom: 7%;
+    }
+}
+@media screen and (min-width: 981px) and (max-width: 1200px)
+{
+    .background-container{
+        width: 954px;
+        height: 100%;
+        margin-bottom: 7%;
+    }
+}
+@media screen and (min-width: 1201)
+{
+    .background-container{
+        width: 954px;
+        height: 100%;
+        margin-bottom: 7%;
+    }
+}
+/*
 @media screen and
 (max-width:520px) 
 {
@@ -62,4 +100,4 @@ wrapper-container{
         max-width: 400px;
         margin-bottom: 0%;
     }
-}
+} */
