--- a/styles/Videoplayer.css
+++ b/styles/Videoplayer.css
@@ -12,11 +12,12 @@ iframe{
     margin-right:auto;
     width: 100%;
     height: 100%;
-    max-width: 750px;
+    max-width: 800px;
     min-width: none;
-    max-height: 700px;
+    max-height: 685px;
     min-height: 300px;
-    padding: 3% 0% 3%;
+    padding: 0px 0px 0px 0px;
+    margin-top: 30px;
     overflow:visible;
 }
 .modal-wrapper{
@@ -82,139 +83,176 @@ iframe{
     align-items: center;
   }
 
-@media screen and
+  @media screen and (min-width: 576px) and (max-width: 805px)
+{
+    iframe{
+        max-height: 596px;
+        min-height: 321px;
+        padding: 2px 8px 0px 13px;
+        margin: 26px auto auto;
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        max-width: 634px;
+    }
+}
+@media screen and (min-width: 806px) and (max-width: 980px)
+{
+    iframe{
+        max-height: 596px;
+        min-height: 321px;
+        padding: 2px 8px 0px 13px;
+        margin: 26px auto auto;
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        max-width: 634px;
+    }
+}
+
+@media screen and (min-width: 981px) and (max-width: 1200px)
+{
+    iframe{
+        max-height: 653px;
+        min-height: 321px;
+        padding: 2px 2px 0 6px;
+        margin: 34px auto auto;
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        max-width: 681px;
+    }
+}
+@media screen and (min-width: 1201)
+{
+    iframe{
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        max-width: 800px;
+        min-width: none;
+        max-height: 685px;
+        min-height: 300px;
+        padding: 0;
+        margin: 48px auto auto;
+        overflow: visible;
+    }
+}
+/* @media screen and
 (max-width:1560px){
     iframe{
-        padding: 4% 0% 3%;
     }
 }
 @media screen and 
 (max-width:1260px){
     iframe{
-        padding: 5% 0% 4% ;
+       
     }
-}
+} */
+/* @media screen and 
+(max-width:1200px){
+    iframe{
+        max-width: 838px !important;
+        max-height: 689px !important;
+        min-height: 300px !important;
+        margin: 12px 0px 0px !important;
+        padding: 7px 2px !important;
+    }
+} */
 
-@media screen and
+/* @media screen and
 (max-width: 980px) {
     iframe{
-        max-width: 72.5% !important;
-        padding: 5% 0.25% 7% !important;
-        max-height: 90% !important;
+        max-width: 970px !important;
+        padding: 0px 135 !important;
+        max-height: 618px !important;
     }
 }
 @media screen and
 (max-width:890px) {
     iframe{
-        padding: 8% 0% 10% !important;
     }
     
 }
 @media screen and
 (max-width:825px) {
     iframe{
-        max-height: 600px !important;
-        padding: 15% 0% 7% !important;
+       
     }
 }
 @media screen and 
 (max-width:780px){
     iframe{
-        max-height: 550px !important;
-        padding: 7% 0% 10% !important;
-        width: 650px;
+       
     }
     
 }
 @media screen and
 (max-width:680px){
     iframe{
-        max-height: 500px !important;
-        width: 575px !important;
-        padding: 12% 0% 9% !important;
+       
     }
     
 }
 @media screen and
 (max-width: 600px) {
     iframe{
-        max-width: 75% !important;
-        padding: 4% 0% 15% !important;
+       
     }
 }
 @media screen and
 (max-width: 555px) {
     iframe{
-        padding: 5% 0.5% 17% !important;
     }
 }
 @media screen and
 (max-width:520px) {
     iframe{
-        max-width: 80% !important;
-        padding: 8% 3% 6% !important;
-        height: 440px !important;
+       
     }
     
 }
 @media screen and
 (max-width:485px) {
     iframe{
-        padding: 5% 2.25% 2.5% !important;
     }
 }
 @media screen and
 (max-width:455px) {
     iframe{
-        height: 410px !important;
-        min-width: 375px !important;
-        padding: 12.5% 3% 1% !important;
+       
     }
 }
 @media screen and
 (max-width:410px) {
     iframe{
-        max-width: 100% !important;
-        min-width: 350px !important;
-        width: 470px !important;
-        padding: 5% 5.25% -5% !important;
+       
     }
 }
 @media screen and
 (max-width:370px) {
     iframe{
-        height: 500px !important;
-        max-width: 80% !important;
-        min-width: 325px !important;
-        padding: 0% 5% 15% !important;
+        
     }
 }
 @media screen and 
 (max-width:340px){
     iframe{
-        padding: 10% 2% 10% !important;
-        height: 450px !important;
-        min-width: 275px !important;
+       
     }
 }
 @media screen and
 (max-width:310px) {
     iframe{
-        min-width: 275px !important;
-        width: 100% !important;
-        padding: 1.5% 5% 1.5% !important;
+       
     }
 }
 @media screen and
 (max-width:285px) {
     iframe{
-        min-height: 450px !important;
-        min-width: 225px!important;
-        padding: 0% 0% 0% !important;
-        width: 110% !important;
-        max-height: 35vh   !important;
+        
     }
-}
+} */
 
 /*position:absolute;
     border-radius:0.25em;
